[project]
name = "reepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anantajit Subrahmanya", email = "anantajit@ucsb.edu" }
]
requires-python = ">=3.10"

dependencies = [
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "sortedcontainers>=2.4.0",
]

[project.scripts]
reepy = "reepy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "pyinstrument>=5.1.1",
    "pytest>=8.4.0",
    "reepy",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
reepy = { workspace = true }
